<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">LimeLight</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="do_not_save">Don\'t Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <!-- RecorderWindow -->
    <string name="enter_act_msg">Enter Act Message</string>
    <string name="choose_font">Choose Font</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="message">Message</string>
    <string name="pick_color">Choose Color</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background</string>
    <string name="transparent">Transparent</string>
    <string name="text_size">Text Size </string>
    <string name="animation">Animation </string>
    <string name="noAnimation">None</string>
    <string name="leftRightAnimation">Left to Right</string>
    <string name="upDownAnimation">Up to Down</string>
    <string name="play">Play</string>
    <string name="save_text">Save current progress?</string>
    <string name="save_progress">Save Progress</string>
    <string name="save_warning">Go back without saving?</string>
    <string name="back_to_menu">Back to Starting Menu</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="COLOR_KEY">color_key</string>
    <string name="choose_drawer_item">Choose Drawer Item</string>
    <string name="position">Position:</string>
    <string name="act_default_message">Enter Text Here</string>
    <string name="duration">Transition Duration:</string>
    <string name="seconds">Seconds</string>
    <string name="set_to_zero">Hint: Set to 0 to persist.</string>
    <string name="choose_transition">Choose Transition</string>
    <string name="nothing_play">Nothing to play</string>

    <!-- FileDirectoryDialog -->
    <string name="load">Load</string>
    <string name="save_file_name">Save File Name</string>
    <string name="new_folder">New Folder</string>
    <string name="error_create_dir">Problem creating directory</string>
    <string name="new_folder_name">Enter Folder Name</string>
    <string name="overwrite">Overwrote File</string>
    <string name="file_name_invalid">File name is invalid</string>
    <string name="json_invalid">Selected file is not a json file.</string>
    <string name="json_error">Error occurred when reading file.</string>
    <string name="empty_book_warning">Nothing to save</string>
    <string name="wrong_application">Problem loading, needs app with package name: </string>
</resources>
