<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_menu_layout">

    <Button
        android:id="@+id/saveProgressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_progress"
        android:background="?android:attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#33b5e5" />

    <Button
        android:id="@+id/backToMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:background="?android:attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#33b5e5" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>