<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:background="@android:color/white"
        android:id="@+id/menu_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:id="@+id/menu_1_label"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/dark_green"/>

        <EditText
            android:id="@+id/actMessageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rect"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:id="@+id/menu_1_label2"
                android:layout_marginLeft="7dp"
                android:textIsSelectable="false"
                android:textColor="@color/dark_green"
                android:layout_marginRight="7dp"/>

            <EditText
                android:id="@+id/actDurationEdit"
                android:inputType="number"
                android:hint="@string/seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rect"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingRight="10dp"
                android:paddingBottom="6dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="7dp"
            android:text="@string/set_to_zero"
            android:layout_gravity="right"/>
    </LinearLayout>
</ScrollView>